Update guava dependency

--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/guava-14.0.1.jar" sourcepath="C:/Users/Dean/.m2/repository/com/google/guava/guava/14.0.1/guava-14.0.1-sources.jar"/>
+	<classpathentry kind="lib" path="lib/guava-23.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
